--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,7 @@
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
-    %script{:type => "text/javascript", :src => "http://p.xingcloud.com:3001/xingcloud.js?project_id=#{@project.identifier}"}
+    = javascript_include_tag "http://p.xingcloud.com:3001/xingcloud.js?project_id=#{@project.identifier}&login=#{current_user}"
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = yield :head
@@ -23,17 +23,15 @@
     .container-fluid
       
       .row-fluid
-        - if not @project.nil?
-          .page-header
-            %h1
-              = @project.name
-              %small
-                = @project.identifier
-          .subnav{:style => "margin-bottom: 10px"}
-            = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
-              = tab.project "首页", project_path(@project)
-              = tab.report "报告管理", project_reports_path(@project)
-              = tab.menu '菜单管理', project_menus_path(@project)
+        .page-header
+          %h1
+            = @project.name
+            %small= @project.identifier
+        .subnav{:style => "margin-bottom: 10px"}
+          = tabs_tag :namespace => :sub, :builder => TabsOnRails::SubNav do |tab|
+            = tab.project "首页", project_path(@project)
+            = tab.report "报告管理", project_reports_path(@project)
+            = tab.menu '菜单管理', project_menus_path(@project)
           = notice_message
         = yield
       
