--- a/app/views/menus/index.haml
+++ b/app/views/menus/index.haml
@@ -1,3 +1,4 @@
+- stylesheet "menus"
 - javascript "menus"
 
 .btn{:'add_menu'=> "#{new_project_menu_path(@project)}"} 添加菜单
@@ -15,7 +16,7 @@
     - if !menu.child?
       %tr{:id => "menu[#{menu.id}]=root" }
         %td
-          %span.folder= menu.name
+          %span.icon.folder= menu.name
         %td
         %td= menu.desc
         %td= menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
@@ -25,7 +26,7 @@
         - menu.children.each do |sub_menu|
           %tr{:id => "menu[#{sub_menu.id}]=#{menu.id}" }
             %td
-              %span.file= raw "&nbsp;&nbsp;&nbsp;#{sub_menu.name}"
+              %span.icon.file= raw "&nbsp;&nbsp;&nbsp;#{sub_menu.name}"
             %td= sub_menu.reports.map(&:title).join("|")
             %td= sub_menu.desc
             %td= sub_menu.created_at.strftime("%Y-%m-%d %H:%M:%S")
