--- a/app/views/admin/template_menus/_form.haml
+++ b/app/views/admin/template_menus/_form.haml
@@ -7,12 +7,12 @@
       .row
         .span6
           = f.input :name
-          = f.input :parent_id,:collection => @menus ,:input_html => {:class =>'chzn-select'}
+          = f.input :parent_id,:collection => @menus ,:input_html => {:class =>'chzn-select',:tabindex=>"0"}
           .control-group.string.optional#parent_menus_sel{:style=>"#{@menu.new_record? ? 'display:none;' : 'display:block;' }"}
             %label.string.optional.control-label
               %div　报表
               %div.controls
-                = select_tag :report_id, options_for_select(@reports.map {|p| [ p.title, p.id ] },@menu.report_ids),{:class=>'chzn-select',:multiple => true, :size =>4, :id => "menu_report" }
+                = select_tag :report_id, options_for_select(@reports.map {|p| [ p.title, p.id ] },@menu.report_ids),{:class=>'chzn-select',:tabindex=>"-1",:multiple => true, :style=>'width:230px', :id => "menu_report" }
           = f.input :desc
 
   .form-actions
