fix report bug and add 401

--- a/app/views/reports/_report.haml
+++ b/app/views/reports/_report.haml
@@ -3,6 +3,7 @@
 .row-fluid
   .span9
     #chart_container{:style => "position:relative"}
+      #report_message
       #report_desc
       #report_chart
       #report_legend
