add report_tab report_category remove menu_report menus

--- a/app/views/admin/template_reports/index.haml
+++ b/app/views/admin/template_reports/index.haml
@@ -1,21 +1,42 @@
-- title '通用报告管理'
+- title '报告管理'
 
 %p
-  = link_to "添加通用报告", new_admin_template_report_path(), :class => "btn"
+  = link_to "添加报告", new_admin_template_report_path(), :class => "btn"
+  = link_to "添加分类", "#category_new", :class => "btn", "data-toggle" => "modal"
 
 %table.table
   %tr
-    %th 报告名称
-    %th 报告类型
-    %th 创建时间
-    %th
+    %th{:width => "50%"} 标题
+    %th{:width => "30%"}  创建时间
+    %th{:width => "15%"}
+  - if @categories.empty? and @reports.empty?
+    %tr
+      %td{:colspan => "3", :style => "text-align: center;"} 没有数据
+  - @categories.each do |category|
+    %tr
+      %td
+        %i{:class => "icon-folder-open"}
+        %em= category.name
+      %td= category.created_at
+      %td= render :partial => "category_dropdown", :locals => {:category => category}
+    - category.reports.each do |report|
+      %tr
+        %td
+          &nbsp;&nbsp;&nbsp;&nbsp;
+          %i{:class => "icon-file"}
+          = report.title
+        %td= report.created_at
+        %td= render :partial => "report_dropdown", :locals => {:report => report}
   - @reports.each do |report|
     %tr
-      %td= report.title.presence || "(没有设置)"
-      %td= report.class.model_name.human
-      %td= report.created_at
       %td
-        = link_to_edit edit_admin_template_report_path(report)
-        = link_to_delete admin_template_report_path(report)
+        %i{:class => "icon-file"}
+        = report.title
+      %td= report.created_at
+      %td= render :partial => "report_dropdown", :locals => {:report => report}
 
-= will_paginate @reports
+
+= render "category_new"
+- @categories.each do |category|
+  = render :partial => "category_edit", :locals => {:category => category, :id => category.id}
+  = render :partial => "category_delete", :locals => {:category => category, :id => category.id}
