--- a/app/views/reports/index.haml
+++ b/app/views/reports/index.haml
@@ -1,20 +1,1 @@
-%p
-  = link_to "添加报告", new_project_report_path(@project), :class => "btn"
-  = link_to "从预设的报告中添加", choose_template_project_reports_path(@project), :class => "btn"
-
-%table.table
-  %tr
-    %th 报告名称
-    %th 报告类型
-    %th 创建时间
-    %th
-  - @reports.each do |report|
-    %tr
-      %td= link_to report.title.presence || "(没有设置)", project_report_path(@project, report)
-      %td= report.class.model_name.human
-      %td= report.created_at
-      %td
-        = link_to_edit edit_project_report_path(@project, report)
-        = link_to_delete project_report_path(@project, report)
-      
-= will_paginate @reports
+= render "report_list"
