--- a/app/views/reports/_list.haml
+++ b/app/views/reports/_list.haml
@@ -1,7 +1,7 @@
 - title '报告管理'
 
 %p
-  = link_to "添加报告", new_admin_template_report_path(), :class => "btn"
+  = link_to "添加报告", @project.nil? ? new_admin_template_report_path() : new_project_report_path(@project), :class => "btn"
   = link_to "添加分类", "#category_new", :class => "btn", "data-toggle" => "modal"
 
 %table.table
@@ -18,7 +18,7 @@
         %i{:class => "icon-folder-open"}
         %em= category.name
       %td= category.created_at
-      %td= render :partial => "reports/category_dropdown", :locals => {:category => category}
+      %td= render :partial => "report_categories/dropdown", :locals => {:category => category}
     - category.reports.each do |report|
       %tr
         %td
@@ -26,17 +26,17 @@
           %i{:class => "icon-file"}
           = report.title
         %td= report.created_at
-        %td= render :partial => "reports/report_dropdown", :locals => {:report => report}
+        %td= render :partial => "reports/dropdown", :locals => {:report => report}
   - @reports.each do |report|
     %tr
       %td
         %i{:class => "icon-file"}
         = report.title
       %td= report.created_at
-      %td= render :partial => "reports/report_dropdown", :locals => {:report => report}
+      %td= render :partial => "reports/dropdown", :locals => {:report => report}
 
 
-= render "reports/category_new"
+= render "report_categories/new"
 - @categories.each do |category|
-  = render :partial => "reports/category_edit", :locals => {:category => category, :id => category.id}
-  = render :partial => "reports/category_delete", :locals => {:category => category, :id => category.id}
+  = render :partial => "report_categories/edit", :locals => {:category => category, :id => category.id}
+  = render :partial => "report_categories/delete", :locals => {:category => category, :id => category.id}
