--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -10,7 +10,11 @@
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
-    = javascript_include_tag "http://p.xingcloud.com:3001/xingcloud.js?project_id=#{@project.identifier}&select=analytic"
+    - if Rails.env == "development"
+      = javascript_include_tag "http://10.1.138.48:3001/xingcloud.js?project_id=#{@project.identifier}&select=analytic"
+    - else
+      = javascript_include_tag "http://p.xingcloud.com/xingcloud.js?project_id=#{@project.identifier}&select=analytic"
+    
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = yield :head
