add support for report_tab and change project show

--- a/app/views/admin/template_metrics/create.haml
+++ b/app/views/admin/template_metrics/create.haml
@@ -1,10 +1,1 @@
-%p
-  = link_to_function "返回报告页面", "add_metric()", :class => "btn btn-success"
-  
-:javascript
-
-  function add_metric() {
-    parent.Metrics.addItem(#{@metric.short_attributes.to_json});
-    
-    close_dialog();
-  }
+= render "metrics/create_back"
