--- a/app/views/admin/template_metrics/update.haml
+++ b/app/views/admin/template_metrics/update.haml
@@ -1,10 +1,1 @@
-%p
-  = link_to_function "返回报告页面", "update_metric()", :class => "btn btn-success"
-
-:javascript
-
-  function update_metric() {
-    parent.Metrics.updateItem(#{@metric.short_attributes.to_json});
-    
-    close_dialog();
-  }
+= render "metrics/update_back"
