remove template from models

--- a/app/assets/javascripts/backbone/templates/report_tabs/edit_body.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/report_tabs/edit_body.jst.ejs
@@ -7,7 +7,7 @@
 
 <div class="control-group">
     <input id="report_report_tabs_attributes_<%= model.get('index') %>_id" name="report[report_tabs_attributes][<%= model.get('index') %>][id]" type="hidden" value="<%= model.get('id') %>" />
-    <label class="control-label" for="report_report_tabs_attributes_<%= model.get('index') %>_chart_type">标题</label>
+    <label class="control-label" for="report_report_tabs_attributes_<%= model.get('index') %>_chart_type">类型</label>
     <div class="controls">
         <input id="report_report_tabs_attributes_<%= model.get('index') %>_chart_type" name="report[report_tabs_attributes][<%= model.get('index') %>][chart_type]" type="hidden" value="<%= model.get('chart_type') %>" />
         <div class="btn-group">
