--- a/app/views/reports/_left_nav.haml
+++ b/app/views/reports/_left_nav.haml
@@ -8,8 +8,8 @@
       .accordion-inner
         %ul.nav.nav-list
           = render(:partial => "reports/left_menu",
-                   :locals => {:categories => ReportCategory.where({:template => 1}).order("position asc").all(),
-                               :reports => Report.where("template = ? and report_category_id = ?", 1, nil).all()})
+                   :locals => {:categories => ReportCategory.where({:project_id => nil}).order("position asc").all(),
+                               :reports => Report.where({:project_id => nil, :report_category_id => nil}).all()})
   .accordion-group
     .accordion-heading
       %a.accordion-toggle{"data-toggle" => "collapse", "data-parent" => "#nav-accordion", :href => "#collapse-custom"}
