--- a/app/assets/javascripts/backbone/templates/report_tabs/edit_header.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/report_tabs/edit_header.jst.ejs
@@ -1,4 +1,4 @@
 <a href="#report_tab<%= model.get('index')%>" data-toggle="tab">
-    <i class="remove_tab icon-remove-sign close" onclick="javascript:report_tabs_view.removeOne(<%= model.get('index')%>)"></i>
+    <i class="remove_tab icon-remove-sign close" onclick="report_tabs_router.del(<%= model.get('index') %>)"></i>
     <%= (model.get('title') == undefined) ? "报告标签" : model.get('title') %> &nbsp;
 </a>
