--- a/app/views/metrics/_create_back.haml
+++ b/app/views/metrics/_create_back.haml
@@ -1,3 +1,3 @@
 :javascript
-  parent.report_tabs_view.addMetric(#{@tab_index}, #{@metric.attributes.to_json});
+  parent.metrics_router.add(#{@tab_index}, #{@metric.attributes.to_json});
   close_dialog();
