--- a/app/views/projects/_left_nav.haml
+++ b/app/views/projects/_left_nav.haml
@@ -4,10 +4,10 @@
       %a.accordion-toggle{"data-toggle" => "collapse", "data-parent" => "#nav-accordion", :href => "#collapse-template"}
         %i.icon-list-alt
         默认报告
-    #collapse-template.accordion-body.collapse.in
+    #collapse-template.accordion-body.collapse{:class => "#{(@report.nil? or @report.project_id.nil?) ? 'in' : ''}"}
       .accordion-inner
         %ul.nav.nav-list
-          = render(:partial => "reports/left_menu",
+          = render(:partial => "projects/left_menu",
                    :locals => {:categories => ReportCategory.where({:project_id => nil}).order("position asc").all(),
                                :reports => Report.where({:project_id => nil, :report_category_id => nil}).all()})
   .accordion-group
@@ -15,10 +15,10 @@
       %a.accordion-toggle{"data-toggle" => "collapse", "data-parent" => "#nav-accordion", :href => "#collapse-custom"}
         %i.icon-list-alt
         自定义报告
-    #collapse-custom.accordion-body.collapse
+    #collapse-custom.accordion-body.collapse{:class => "#{(@report.nil? or not @report.project_id.nil?) ? 'in' : ''}"}
       .accordion-inner
         %ul.nav.nav-list
-          = render(:partial => "reports/left_menu",
+          = render(:partial => "projects/left_menu",
                    :locals => {:categories => @project.report_categories.all(),
                                :reports => @project.reports.where(:report_category_id => nil).all()})
 
