--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,4 +1,11 @@
-
-
-    
-    
+.span2
+  = render "projects/left_nav"
+.span10
+  - if @report.nil?
+    .hero-unit
+      %h2 暂无数据
+      %p 强大的自定义报告功能可以让你获得最为精准的游戏数据，快去创建第一份报告吧
+      %p
+        %a.btn.btn-primary.btn-large{:href => new_project_report_path(@project)}
+          %i.icon-plus.icon-white
+          创建报告
