--- a/app/views/reports/_list.haml
+++ b/app/views/reports/_list.haml
@@ -1,42 +1,44 @@
-- title '报告管理'
+.span2
+  - if not @project.nil?
+    = render "projects/left_nav"
+  - else
+    = render "admin/projects/left_nav"
 
-%p
-  = link_to "添加报告", @project.nil? ? new_admin_template_report_path() : new_project_report_path(@project), :class => "btn"
-  = link_to "添加分类", "#category_new", :class => "btn", "data-toggle" => "modal"
+.span10
+  %h3 报告管理
+  %hr
 
-%table.table
-  %tr
-    %th{:width => "50%"} 标题
-    %th{:width => "30%"}  创建时间
-    %th{:width => "15%"}
-  - if @categories.empty? and @reports.empty?
+  %p
+    = link_to "添加报告", "#/reports/new", :class => "btn"
+    = link_to "添加分类", "#/report_categories/new", :class => "btn"
+
+  %table.table
     %tr
-      %td{:colspan => "3", :style => "text-align: center;"} 没有数据
-  - @categories.each do |category|
-    %tr
-      %td
-        %i{:class => "icon-folder-open"}
-        %em= category.name
-      %td= category.created_at
-      %td= render :partial => "report_categories/dropdown", :locals => {:category => category}
-    - category.reports.each do |report|
+      %th{:width => "50%"} 标题
+      %th{:width => "30%"}  创建时间
+      %th{:width => "15%"}
+    - if @categories.empty? and @reports.empty?
+      %tr
+        %td{:colspan => "3", :style => "text-align: center;"} 没有数据
+    - @categories.each do |category|
       %tr
         %td
-          &nbsp;&nbsp;&nbsp;&nbsp;
+          %i{:class => "icon-folder-open"}
+          %em= category.name
+        %td= category.created_at
+        %td= render :partial => "report_categories/dropdown", :locals => {:category => category}
+      - category.reports.each do |report|
+        %tr
+          %td
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            %i{:class => "icon-file"}
+            = report.title
+          %td= report.created_at
+          %td= render :partial => "reports/dropdown", :locals => {:report => report}
+    - @reports.each do |report|
+      %tr
+        %td
           %i{:class => "icon-file"}
           = report.title
         %td= report.created_at
         %td= render :partial => "reports/dropdown", :locals => {:report => report}
-  - @reports.each do |report|
-    %tr
-      %td
-        %i{:class => "icon-file"}
-        = report.title
-      %td= report.created_at
-      %td= render :partial => "reports/dropdown", :locals => {:report => report}
-
-
-= render "report_categories/new"
-- @categories.each do |category|
-  = render :partial => "report_categories/edit", :locals => {:category => category, :id => category.id}
-  = render :partial => "report_categories/delete", :locals => {:category => category, :id => category.id}
