--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,7 +1,7 @@
-.span2
-  = render "projects/left_nav"
-.span10
-  - if @report.nil?
+- if @report.nil?
+  .span2
+    = render "projects/left_nav"
+  .span10
     .hero-unit
       %h2 暂无数据
       %p 强大的自定义报告功能可以让你获得最为精准的游戏数据，快去创建第一份报告吧
@@ -9,3 +9,6 @@
         %a.btn.btn-primary.btn-large{:href => new_project_report_path(@project)}
           %i.icon-plus.icon-white
           创建报告
+- else
+  = render "reports/show"
+
