--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -12,6 +12,7 @@
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = stylesheet_link_tag "reports"
+    = stylesheet_link_tag "segments"
     = yield :head
 
     :css
@@ -52,5 +53,6 @@
 
 :javascript
   var reports_router = new Analytics.Routers.ReportsRouter([]);
+  var segments_router = new Analytics.Routers.SegmentsRouter([]);
   var report_categories_router = new Analytics.Routers.ReportCategoriesRouter();
   Backbone.history.start();
