--- a/app/views/segments/_form.html.haml
+++ b/app/views/segments/_form.html.haml
@@ -1,30 +1,34 @@
+- stylesheet "segments"
 
-= simple_form_for @segment, :as => :segment, :url => @segment.new_record? ? project_segments_path(@project) : project_segment_path(@project,@segment), :html => {:class => "form-horizontal"} do |f|
-  .page-header
-    %h3
-    一般信息
-    %small 填写用户群目的，和用户群说明
+.span2
+  - if not @project.nil?
+    = render "projects/left_nav"
+  - else
+    = render "admin/projects/left_nav"
 
-  .form-stacked
+.span10
+
+  - if @segment.persisted?
+    %h3 编辑用户群
+    %hr
+  - else
+    %h3 新建用户群
+    %hr
+
+  = form_for @segment, :url => "#", :html => {:class => "form-horizontal", :onsubmit => "return false"} do |f|
     %fieldset
-      %row-fluid
-        .span12
-          = f.input :name ,:required => true
-          .03
-            .dY
-              .te
-                .Ai#expressionlist
-                  = render :partial=>'shared/template',:locals => {:segment => @segment}
-
-
-
-  .form-actions
-    = f.submit "提交", :class => "btn btn-primary"
-    = link_to "取消", "javascript:void(0)", :class => "btn"
-
-:javascript
-  $(function(){
-    $(".btn").click(function(){
-      $("#segment_list").hide();
-    })
-  })
+      .control-group
+        = f.label :name, "名称", :class => "control-label"
+        .controls
+          = f.text_field :name
+        .03
+          .dY
+            .te
+              .Ai#expressionlist
+                = render :partial=>'shared/template',:locals => {:segment => @segment}
+    .form-actions
+      - if @segment.persisted?
+        %a.btn.btn-primary{:onclick => "segments_router.update('edit_segment_#{@segment.id}', #{@segment.id})"} 保存
+      - else
+        %a.btn.btn-primary{:onclick => "segments_router.create('new_segment')"} 保存
+      %a.btn{:href => "#/segments"} 取消
